--- a/pubspec.yaml
+++ b/pubspec.yaml
@@ -49,7 +49,14 @@ dependencies:
 dev_dependencies:
   flutter_test:
     sdk: flutter
+  flutter_launcher_icons: ^0.11.0
 
+flutter_icons:
+  android: true
+  ios: true
+  image_path: "assets/pngs/socially_logo.png"
+  adaptive_icon_background: "#F3F3F7"
+  adaptive_icon_foreground: "assets/pngs/socially_logo.png"
   # The "flutter_lints" package below contains a set of recommended lints to
   # encourage good coding practices. The lint set provided by the package is
   # activated in the `analysis_options.yaml` file located at the root of your
@@ -71,6 +78,7 @@ flutter:
   # To add assets to your application, add an assets section, like this:
   assets:
     - assets/svgs/
+    - assets/pngs/
   #   - images/a_dot_ham.jpeg
 
   # An image asset can refer to one or more resolution-specific "variants", see
